@@ -1,5 +1,6 @@
 Version 5.3.0.8
 Added variable-reference->module-path-index
+Added syntax-local-submodules
 
 Version 5.3.0.7
 compiler/zo-struct: added cancel-id field to phase-shift
